# sequanto-automation

./: .gitignore  CMakeLists.txt  README.md
arduino/: CMakeLists.txt
arduino/libraries/SequantoAutomation/: SequantoAutomation.cpp  SequantoAutomation.h
arduino/libraries/SequantoAutomation/examples/arduino_io/: arduino_io.ino
arduino/libraries/SequantoAutomation/examples/arduino_test/: arduino_test.ino
arduino/libraries/SequantoAutomation/utility/src/: config.h  config.h.in
arduino/tools/SequantoAutomationTool/src/: SequantoAutomationTool.java
client/python/lib/sequanto/: automation.py
cmake/: FindWindowsSDK.cmake
generator/: generate_automation_defines.py
generator/code/c/: automation_functions.c
generator/lib/sequanto_automation/: __init__.py  codeparser.py
generator/lib/sequanto_automation/codeparsers/: c.py
server/c/: CMakeLists.txt
server/c/applications/: CMakeLists.txt
server/c/applications/acme_ventilator/: main.c
server/c/applications/arduino_demo/: main.cpp
server/c/applications/arduino_due_can_monitor/: CMakeLists.txt  arduino_due_can_monitor.ino
server/c/applications/light_dimmer/: display.cxx  main.cxx
server/c/applications/machine_automation/: CMakeLists.txt  mouse_win32.c  server.c  windows_qt.cxx  windows_win32_oleacc.c  windows_win32_uiautomationclient.cxx
server/c/applications/machine_automation/qt_automation/: mainwin.cpp  mainwin.h  mainwin.ui  qt_automation.cpp  qt_machine_automation.cpp
server/c/examples/: CMakeLists.txt  liab_test.c  test_server.c  type_tests.automation  type_tests.c
server/c/include/sequanto/: automation.h  types.h
server/c/src/: config.h.in  sq_server.c  sq_stream_arduino_due_can.c  sq_stream_tcp.c  sq_types.c
server/c/tests/: CMakeLists.txt  test_parser.c  test_server.c
(+2 files in other folders)
